# franz

./: .gitignore  2  Cargo.toml  README.md  TODO.md  fish.prof  flake.nix  test
franz-core/: Cargo.toml
franz-core/src/: lib.rs
franz-macros/: Cargo.toml
franz-macros/src/: decode.rs  encode.rs  lib.rs
src/: client.rs  franz.rs  lib.rs  main.rs  protocol.rs  server.rs  temp.rs  troy-komodo-example.rs
