[package]
name = "franz"
version = "0.7.4"
edition = "2021"
authors = ["Maxi Saparov <max.saparov@gmail.com>"]
description = "a simple, friendly, and blazingly fast alternative to Apache Kafka"
documentation = "https://docs.rs/franz"
homepage = "https://github.com/MostlyMaxi/franz"
repository = "https://github.com/MostlyMaxi/franz"
readme = "README.md"
keywords = ["ringbuffer", "queue", "kafka"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive", "string"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
disk-mpmc = "0.4.2"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.63"
tokio-scoped = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
